--- a/views/browse_projects/browse_projects.html
+++ b/views/browse_projects/browse_projects.html
@@ -1,7 +1,4 @@
 <div class="container-fluid" style="padding-right: 0; padding-left: 0;">
-  <!--<div class="text-center" style="padding-top: 15vh; padding-bottom: 15vh; background-color: lightgray;">-->
-    <!--something here...-->
-  <!--</div>-->
   <img src="img/bg31.png" style="width: 100%">
 </div>
 <div class="container" style="padding-top: 50px;" ng-if="!category">
@@ -12,7 +9,8 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4 col-lg-4 col-sm-1" ng-repeat="project in projects | orderBy : 'post_date':true" style="margin-bottom: 30px;">
+    <div class="col-md-4 col-lg-4 col-sm-1" ng-repeat="project in projects | orderBy : 'post_date':true"
+         style="margin-bottom: 30px;">
 
       <div class="card">
         <div class="card-block">
@@ -20,7 +18,8 @@
           <!--title-->
           <div class="row">
             <div class="col-md-12">
-              <a ng-click="goProject(project.id)"><h4 class="card-title">{{project.title | limitTo: 15 }}{{project.title.length > 15 ? '...' : ''}}</h4></a>
+              <a ng-click="goProject(project.id)"><h4 class="card-title">{{project.title | limitTo: 15
+                }}{{project.title.length > 15 ? '...' : ''}}</h4></a>
             </div>
             <div class="col-md-12">
               <h6 class="card-subtitle mb-2 text-muted">{{project.category}}</h6>
@@ -30,14 +29,16 @@
           <!--description-->
           <div class="row" style="min-height: 80px; max-height: 80px; overflow: hidden; font-size: smaller">
             <div class="col-md-12">
-              <p class="card-text">{{project.description | limitTo: 100 }}{{project.description.length > 100 ? '...' : ''}}</p>
+              <p class="card-text">{{project.description | limitTo: 100 }}{{project.description.length > 100 ? '...' :
+                ''}}</p>
             </div>
           </div>
 
           <!--owner-->
           <div class="row">
             <div class="col-md-12">
-              <small>by</small> {{project.owner}}
+              <small>by</small>
+              {{project.owner}}
             </div>
           </div>
 
@@ -45,7 +46,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%" aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0" aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
+                <div class="progress-bar" role="progressbar"
+                     style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%"
+                     aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0"
+                     aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
               </div>
             </div>
           </div>
@@ -54,7 +58,9 @@
           <div class="row small">
             <div class="col-md-6 col-sm-12"><strong>{{project.up_vote}}</strong> voted</div>
             <div class="col-md-6 col-sm-12">{{project.status}}</div>
-            <div class="col-md-6 col-sm-12"><strong>{{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total | number: 0}}%</strong> funded</div>
+            <div class="col-md-6 col-sm-12"><strong>{{(project.resources.manpower.manpower_count.funded * 100) /
+              project.resources.manpower.manpower_count.total | number: 0}}%</strong> funded
+            </div>
           </div>
 
         </div>
@@ -71,7 +77,9 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4 col-lg-4 col-sm-1" ng-repeat="project in projects | filter:{category:category} | orderBy : 'post_date':true" style="margin-bottom: 30px;">
+    <div class="col-md-4 col-lg-4 col-sm-1"
+         ng-repeat="project in projects | filter:{category:category} | orderBy : 'post_date':true"
+         style="margin-bottom: 30px;">
 
       <div class="card">
         <div class="card-block">
@@ -79,7 +87,8 @@
           <!--title-->
           <div class="row">
             <div class="col-md-12">
-              <a ng-click="goProject(project.id)"><h4 class="card-title">{{project.title | limitTo: 15 }}{{project.title.length > 15 ? '...' : ''}}</h4></a>
+              <a ng-click="goProject(project.id)"><h4 class="card-title">{{project.title | limitTo: 15
+                }}{{project.title.length > 15 ? '...' : ''}}</h4></a>
             </div>
             <div class="col-md-12">
               <h6 class="card-subtitle mb-2 text-muted">{{project.category}}</h6>
@@ -89,14 +98,16 @@
           <!--description-->
           <div class="row" style="min-height: 80px; max-height: 80px; overflow: hidden; font-size: smaller">
             <div class="col-md-12">
-              <p class="card-text">{{project.description | limitTo: 100 }}{{project.description.length > 100 ? '...' : ''}}</p>
+              <p class="card-text">{{project.description | limitTo: 100 }}{{project.description.length > 100 ? '...' :
+                ''}}</p>
             </div>
           </div>
 
           <!--owner-->
           <div class="row">
             <div class="col-md-12">
-              <small>by</small> {{project.owner}}
+              <small>by</small>
+              {{project.owner}}
             </div>
           </div>
 
@@ -104,7 +115,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%" aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0" aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
+                <div class="progress-bar" role="progressbar"
+                     style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%"
+                     aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0"
+                     aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
               </div>
             </div>
           </div>
@@ -113,7 +127,9 @@
           <div class="row small">
             <div class="col-md-6 col-sm-12"><strong>{{project.up_vote}}</strong> voted</div>
             <div class="col-md-6 col-sm-12">{{project.status}}</div>
-            <div class="col-md-6 col-sm-12"><strong>{{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total | number: 0}}%</strong> funded</div>
+            <div class="col-md-6 col-sm-12"><strong>{{(project.resources.manpower.manpower_count.funded * 100) /
+              project.resources.manpower.manpower_count.total | number: 0}}%</strong> funded
+            </div>
           </div>
 
         </div>
