--- a/views/individual_project/individual_project.html
+++ b/views/individual_project/individual_project.html
@@ -20,7 +20,8 @@
     <div class="col-md-12 row-padding">
       <h3>{{project.title}}</h3>
       <p class="text-muted">{{project.category}}</p>
-      <small>by</small> {{project.owner}}
+      <small>by</small>
+      {{project.owner}}
     </div>
 
     <div class="col-md-8">
@@ -62,7 +63,10 @@
       <div class="row row-padding">
         <div class="col-md-12">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%" aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0" aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
+            <div class="progress-bar" role="progressbar"
+                 style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%"
+                 aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0"
+                 aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
           </div>
           <div>
             <small class="pull-left">{{project.resources.manpower.manpower_count.funded}} funded</small>
@@ -110,7 +114,7 @@
     <div class="col-md-6" ng-show="project.comments && project.comments.length > 0;" style="margin-top: 20px;">
       <div class="row" ng-repeat="comment in project.comments">
         <div class="col-md-12" style="margin-top: 10px; margin-bottom: 10px; padding-left: 20px; padding-right: 20px;">
-          <div ng-style="{'border-top': $first? '':'1px solid lightgray'}" ></div>
+          <div ng-style="{'border-top': $first? '':'1px solid lightgray'}"></div>
         </div>
         <div class="col-md-2 text-right">
           <img src="img/avatar-default.png" class="rounded-circle" style="height: 40px; width: 40px;">
