--- a/views/home/home.project-list.html
+++ b/views/home/home.project-list.html
@@ -8,7 +8,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4 col-lg-4 col-sm-1" ng-repeat="project in projects |orderBy : 'post_date':true|limitTo:3 " style="margin-bottom: 30px;">
+    <div class="col-md-4 col-lg-4 col-sm-1" ng-repeat="project in projects |orderBy : 'post_date':true|limitTo:3 "
+         style="margin-bottom: 30px;">
 
       <div class="card">
         <div class="card-block">
@@ -16,7 +17,8 @@
           <!--title-->
           <div class="row">
             <div class="col-md-12">
-              <a ng-click="goProject(project.id)"><h4 class="card-title">{{project.title | limitTo: 15 }}{{project.title.length > 15 ? '...' : ''}}</h4></a>
+              <a ng-click="goProject(project.id)"><h4 class="card-title">{{project.title | limitTo: 15
+                }}{{project.title.length > 15 ? '...' : ''}}</h4></a>
             </div>
             <div class="col-md-12">
               <h6 class="card-subtitle mb-2 text-muted">{{project.category}}</h6>
@@ -26,14 +28,16 @@
           <!--description-->
           <div class="row" style="min-height: 80px; max-height: 80px; overflow: hidden; font-size: smaller">
             <div class="col-md-12">
-              <p class="card-text">{{project.description | limitTo: 100 }}{{project.description.length > 100 ? '...' : ''}}</p>
+              <p class="card-text">{{project.description | limitTo: 100 }}{{project.description.length > 100 ? '...' :
+                ''}}</p>
             </div>
           </div>
 
           <!--owner-->
           <div class="row">
             <div class="col-md-12">
-              <small>by</small> {{project.owner}}
+              <small>by</small>
+              {{project.owner}}
             </div>
           </div>
 
@@ -41,7 +45,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%" aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0" aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
+                <div class="progress-bar" role="progressbar"
+                     style="width: {{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total}}%"
+                     aria-valuenow="{{project.resources.manpower.manpower_count.funded}}" aria-valuemin="0"
+                     aria-valuemax="{{project.resources.manpower.manpower_count.total}}"></div>
               </div>
             </div>
           </div>
@@ -50,7 +57,9 @@
           <div class="row small">
             <div class="col-md-6 col-sm-12"><strong>{{project.up_vote}}</strong> voted</div>
             <div class="col-md-6 col-sm-12">{{project.status}}</div>
-            <div class="col-md-6 col-sm-12"><strong>{{(project.resources.manpower.manpower_count.funded * 100) / project.resources.manpower.manpower_count.total | number: 0}}%</strong> funded</div>
+            <div class="col-md-6 col-sm-12"><strong>{{(project.resources.manpower.manpower_count.funded * 100) /
+              project.resources.manpower.manpower_count.total | number: 0}}%</strong> funded
+            </div>
           </div>
 
         </div>
