--- a/views/nav/navbar.html
+++ b/views/nav/navbar.html
@@ -1,7 +1,9 @@
 <div ng-controller="NavbarCtrl">
 
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded" style="padding-top: 15px; padding-bottom: 15px;">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="#">
@@ -20,7 +22,8 @@
         </li>
 
         <li class="nav-item navbar-nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+             aria-expanded="false">
             Categories
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -36,7 +39,8 @@
             <a class="dropdown-item" href="#!/projects?category=Monitoring%20%26%20lSupport">Monitoring & Support</a>
             <a class="dropdown-item" href="#!/projects?category=Pain%20Remover">Pain Remover</a>
             <a class="dropdown-item" href="#!/projects?category=Knowledge%20Sharing">Knowledge Sharing</a>
-            <a class="dropdown-item" href="#!/projects?category=Solving%20Business%20Problem">Solving Business Problem</a>
+            <a class="dropdown-item" href="#!/projects?category=Solving%20Business%20Problem">Solving Business
+              Problem</a>
             <a class="dropdown-item" href="#!/projects?category=Test%20Tools">Test Tools</a>
             <a class="dropdown-item" href="#!/projects?category=Robotics">Robotics</a>
           </div>
@@ -62,8 +66,8 @@
       </ul>
 
       <!--<form class="form-inline my-2 my-lg-0">-->
-        <!--<input class="form-control mr-sm-2" type="text" placeholder="Search">-->
-        <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+      <!--<input class="form-control mr-sm-2" type="text" placeholder="Search">-->
+      <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
       <!--</form>-->
 
 
